<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapsActivity">

    <Button
        android:id="@+id/location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click_my_location"
        android:text="@string/my_location"
        android:textSize="30sp" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click_home"
        android:text="@string/home"
        android:textSize="30sp" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="open_options"
        android:text="@string/settings"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/placeName_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/temperature_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/weather_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_text"
            android:textSize="30sp" />

    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

</LinearLayout>